# agent_composer

./: .env.example  .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  pyproject.toml
docs/: cli.md  index.md  installation.md  mkdocs.yml  reference.md  syntax.md
docs/backlog/: DEFER.md  DONE.md  FUTURE.md  TODO.md
examples/: classify.yaml  hello.yaml  summarize.yaml
src/agent_compose/: README.md  __init__.py  _settings.py  events.py
src/agent_composer/: README.md  __init__.py  _settings.py  events.py
tests/: test_llm_clients.py
tests/cli/: test_run.py
tests/engine/: _codefns.py  _compose_codefns.py  _fakes.py  _graph_builder.py  test_add_subgraph.py  test_agent.py  test_agent_continuation.py  test_agent_ctx_shape.py  test_agent_output_shape_override.py  test_agent_runcontext.py  test_agent_step.py  test_answer_schema.py  test_assemble.py  test_assert_inline_call.py  test_asserts.py  test_author_id_ban.py  test_base_node.py  test_binding.py  test_binding_coskip.py  test_boundary_ids.py  test_boundary_nodes.py  test_build_effects.py  test_build_nodes.py  test_call_node.py  test_call_source_frame.py  test_case.py  test_case_call.py  test_case_value.py  test_child_asserts.py  test_child_suspend.py  test_cli_llm_flags.py  test_cli_prompt.py  test_cli_questions_render.py  test_clone_child.py  test_compose_dual_arm.py  test_coskip_e2e.py  test_defs.py  test_depends_on_e2e.py  test_durable_replay.py  test_end_node.py  (+75 more)
tests/examples/: test_examples.py
tests/seeds/: 00-hello-agent.yaml  01-structured-agent.yaml  02-case.yaml  03-research-one.yaml  04-call.yaml  05-call-map.yaml  06-case-on.yaml  07-model-rating.yaml  08-tool-news.yaml  09-interpolation-ops.yaml  10-asserts-arithmetic.yaml  11-reuse-anchors.yaml  12-depends-on.yaml  13-types-objects.yaml  14-agent-tools.yaml  17-effects-human-wait.yaml  18-research-pipeline.yaml  19-binding-stances.yaml  20-call-defs.yaml  21-inline-call.yaml  22-case-value.yaml  23-asserts-scopes.yaml  24-uses-external.yaml  25-nested-suspension.yaml  (+5 more)
(+145 files in other folders)
