[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-composer"
version = "0.0.1"
description = "Deterministic workflows of agents — a Docker-Compose-shaped YAML for composing LLM / code / model / tool nodes into a runnable flow."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Ngoc Bui" }]
keywords = ["llm", "agents", "workflow", "orchestration", "langchain", "yaml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "langchain-core>=0.3.81",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "lark>=1.1",
    "typing-extensions>=4.14.0",
    # CLI
    "typer>=0.21.0",
    "rich>=13.7.0",
    "questionary>=2.1.0",
]

[project.optional-dependencies]
anthropic = ["langchain-anthropic>=0.3.15"]
openai = ["langchain-openai>=0.3.23"]
google = ["langchain-google-genai>=4.0.0"]
ollama = ["langchain-ollama>=1.1.0"]
all = [
    "langchain-anthropic>=0.3.15",
    "langchain-openai>=0.3.23",
    "langchain-google-genai>=4.0.0",
    "langchain-ollama>=1.1.0",
]
dev = [
    "pytest>=8.0",
    "build>=1.2",
]
docs = ["mkdocs-material>=9.5", "mkdocstrings[python]>=0.26", "black>=24.0"]

[project.scripts]
ac = "agent_composer.cli:main"

[project.urls]
Homepage = "https://github.com/ngocbh/agent-composer"
Repository = "https://github.com/ngocbh/agent-composer"
Documentation = "https://agent-composer.readthedocs.io"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
